aws, gcp, temcent, alibaba price request through spider
