# docs/swagger.json
@@ -41,6 +41,7 @@
         },
         "/ant/api/v1/load/agent": {
             "get": {
+                "description": "Get all agent installation nsId, mcisId, vmId, status.",
                 "consumes": [
                     "application/json"
                 ],
@@ -50,6 +51,7 @@
                 "tags": [
                     "[Agent - for Development]"
                 ],
+                "summary": "Get all agent installation information",
                 "operationId": "GetAllAgentInstallInfo",
                 "responses": {
                     "200": {
@@ -87,12 +89,12 @@
                 "operationId": "InstallAgent",
                 "parameters": [
                     {
-                        "description": "agent install request",
+                        "description": "agent target server req",
                         "name": "loadEnvReq",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.AgentReq"
+                            "$ref": "#/definitions/api.AntTargetServerReq"
                         }
                     }
                 ],
@@ -618,20 +620,6 @@
         }
     },
     "definitions": {
-        "api.AgentReq": {
-            "type": "object",
-            "properties": {
-                "pemKeyPath": {
-                    "type": "string"
-                },
-                "publicIp": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "api.AntTargetServerReq": {
             "type": "object",
             "properties": {
@@ -704,9 +692,6 @@
         "api.LoadExecutionConfigReq": {
             "type": "object",
             "properties": {
-                "antTargetServerReq": {
-                    "$ref": "#/definitions/api.AntTargetServerReq"
-                },
                 "duration": {
                     "type": "string"
                 },
